test/resources/typer/passing/IfCase.scala
object IfCase
    val a:Int(32)=3;
    if (a==2) { "I'm happy" } else {"I want " ++ "to die"} ;
    if (a==3) { error("I'm tired")} else {666}
end IfCase