test/resources/typer/failing/IfCase1.scala
object IfCase1
  val a:Int(32)=3;
  if (a==2) { "I'm happy" } else {"I want " ++ "to die"; 5}
end IfCase1